Added start/stop button and a custom event emitted when number is incremented containing the new value by the game controller

--- a/src/app/game-control/game-control.component.html
+++ b/src/app/game-control/game-control.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-primary">Start</button> <button class="btn btn-primary">Stop</button>
+<button class="btn btn-primary" (click)="startGame()">Start</button> <button class="btn btn-primary" (click)="stopGame()">Stop</button>
