--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,6 @@
         <li>Style the element (e.g. paragraph) holding your output text differently in both components</li>
       </ol>
     </div>
-    <app-game-control></app-game-control>
+    <app-game-control (numberIncremented)="onNumberIncremented($event)"></app-game-control>
   </div>
 </div>
