add numbers emmited by game control to array and loop over and generate odd or even component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,5 +14,12 @@
       </ol>
     </div>
     <app-game-control (numberIncremented)="onNumberIncremented($event)"></app-game-control>
+    <br><br>
+    <div class="container">
+        <div *ngFor="let value of numbers">
+          <app-even *ngIf="value % 2 == 0" [value]="value"></app-even>
+          <app-odd *ngIf="value % 2 != 0" [value]="value"></app-odd>
+        </div>
+    </div>
   </div>
 </div>
