--- a/src/app/game-control/game-control.component.html
+++ b/src/app/game-control/game-control.component.html
@@ -1,1 +1,2 @@
-<button class="btn btn-primary" (click)="startGame()">Start</button> <button class="btn btn-primary" (click)="stopGame()">Stop</button>
+<button class="btn btn-primary" (click)="startGame()">Start</button> 
+<button class="btn btn-primary" (click)="stopGame()">Stop</button>
